--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
-flask flask-socketio redis celery pymongo opencv-python numpy python-engineio python-socketio
+flask
+flask-socketio
+redis
+celery
+pymongo
+opencv-python
+numpy
+python-engineio
+python-socketio
+gunicorn
